[package]
authors = ["Benjamin Sattler <bsattler.inbox@gmail.com>"]
categories = ["command-line-utilities", "development-tools", "config", "filesystem"]
description = ".env file manager that merges defaults with custom settings"
edition = "2021"
exclude = ["tests", "Makefile.toml"]
homepage = "https://renvy.benjaminsattler.net"
keywords = ["env", "file", "settings"]
license = "MIT"
name = "renvy"
readme = "README.md"
repository = "https://github.com/benjaminsattler/renvy"
version = "0.1.4"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "renvy"
path = "src/bin/renvy.rs"
edition = "2021"

[dependencies]
clap = { version = "3.2.5", features = ["derive"] }
librenvy = { version = "~0", path = "../library" }

[dev-dependencies]
cargo-make = "0.35.13"
escargot = "0.5.7"
predicates = "2.1.1"
uuid = { version = "1.1.2", features = ["v4"] }
